@@ -4,7 +4,9 @@ Changelog
 1.3 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Avoid double form tags and invalid markup on the registration portlet with
+  new-style z3cforms.
+  [davidjb]
 
 
 1.2 (2015-03-23)
